# sast-tool

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: sast.yml
samples/: secure_app.py  vulnerable_app.py
src/sast/: __init__.py  analyzer.py  cli.py  engine.py  models.py  report.py
src/sast/rules/: command_injection.py  hardcoded_secrets.py  insecure_config.py  path_traversal.py  sql_injection.py
tests/: test_rules.py
